--- a/index.html
+++ b/index.html
@@ -18,8 +18,27 @@
       <div class="picture" id="pic3" data-order="3"></div>
       <div class="picture" id="pic4" data-order="4"></div>
       <div class="picture" id="pic5" data-order="5"></div>
+      <div class="picture" id="pic6" data-order="6"></div>
+      <div class="picture" id="pic7" data-order="7"></div>
+      <div class="picture" id="pic8" data-order="8"></div>
+      <div class="picture" id="pic9" data-order="9"></div>
+      <div class="picture" id="pic10" data-order="10"></div>
+      <div class="picture" id="pic11" data-order="11"></div>
+      <div class="picture" id="pic12" data-order="12"></div>
+      <div class="picture" id="pic13" data-order="13"></div>
+      <div class="picture" id="pic14" data-order="14"></div>
+      <div class="picture" id="pic15" data-order="15"></div>
+      <div class="picture" id="pic16" data-order="16"></div>
+      <div class="picture" id="pic17" data-order="17"></div>
+      <div class="picture" id="pic18" data-order="18"></div>
+      <div class="picture" id="pic19" data-order="19"></div>
+      <div class="picture" id="pic20" data-order="20"></div>
     </div>
-
+<div id="imageModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="modalImage" />
+  <div id="caption"></div>
+</div>
     <div class="letter-container" id="letterContainer">
       <div class="envelope">
         <div class="letter" id="letterContent">
@@ -36,7 +55,7 @@
       </div>
     </div>
 
-    <button id="toggleMessageBtn">Hide Message</button>
+    <button id="toggleMessageBtn">Show Message</button>
 
     <div class="bt21-footer">
       <p>Powered by your BT21 love 💜</p>
