--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container">
-    <h1 class="title">Happy Birthday, My Beloved!</h1>
+    <h1 class="title">Happy Birthday 22nd, My Loverrrr,MY BABYY!</h1>
 
     <div class="pictures">
       <div class="picture" id="pic1" data-order="1"></div>
@@ -33,6 +33,8 @@
       <div class="picture" id="pic18" data-order="18"></div>
       <div class="picture" id="pic19" data-order="19"></div>
       <div class="picture" id="pic20" data-order="20"></div>
+      <div class="picture" id="pic21" data-order="21"></div>
+      <div class="picture" id="pic22" data-order="22"></div>
     </div>
 <div id="imageModal" class="modal">
   <span class="close">&times;</span>
@@ -62,7 +64,8 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+
 </body>
 
 </html>
+<script src="script.js"></script>
