--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
       <div class="picture" id="pic18" data-order="18"></div>
       <div class="picture" id="pic19" data-order="19"></div>
       <div class="picture" id="pic20" data-order="20"></div>
-      <div class="picture" id="pic21" data-order="21"></div>
-      <div class="picture" id="pic22" data-order="22"></div>
+      <video class="picture" id="pic21" data-order="21" muted loop>
+    <source src="21.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+  <video class="picture" id="pic22" data-order="22" muted loop>
+    <source src="22.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
     </div>
 <div id="imageModal" class="modal">
   <span class="close">&times;</span>
