--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 
 <body>
   <div class="container">
-    <h1 class="title">Happy Birthday 22nd, My Loverrrr,MY BABYY!</h1>
+    <h1 class="title">Happy 22nd Birthday, My Loverrrr,MY BABYY!</h1>
+    <div class="carousel-container">
+      <div class="carousel">
+        <!-- Carousel items will be dynamically added here -->
+      </div>
+      <button class="carousel-btn prev-btn">&lt;</button>
+      <button class="carousel-btn next-btn">&gt;</button>
+    </div>
 
     <div class="pictures">
       <div class="picture" id="pic1" data-order="1"></div>
@@ -34,31 +41,50 @@
       <div class="picture" id="pic19" data-order="19"></div>
       <div class="picture" id="pic20" data-order="20"></div>
       <video class="picture" id="pic21" data-order="21" muted loop>
-    <source src="21.mp4" type="video/mp4" />
-    Your browser does not support the video tag.
-  </video>
-  <video class="picture" id="pic22" data-order="22" muted loop>
-    <source src="22.mp4" type="video/mp4" />
-    Your browser does not support the video tag.
-  </video>
+        <source src="img/21.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+      <video class="picture" id="pic22" data-order="22" muted loop>
+        <source src="img/22.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
     </div>
-<div id="imageModal" class="modal">
-  <span class="close">&times;</span>
-  <img class="modal-content" id="modalImage" />
-  <div id="caption"></div>
-</div>
+    <div id="imageModal" class="modal">
+      <span class="close">&times;</span>
+      <img class="modal-content" id="modalImage" />
+      <div id="caption"></div>
+    </div>
     <div class="letter-container" id="letterContainer">
       <div class="envelope">
         <div class="letter" id="letterContent">
-          Dearest, happy birthday! ... Since the first day i knew we will celebrate each other's birthday together, I
-          have been looking forward to this day. I am so grateful to have you in my life. You are my sunshine
-          and my best friend. Even though we are feeling stagnant in our relationship, I want you to know that you are
-          the only one the ill ever love,I already promised myself since the day that you accepted me in your life as
-          your partner that i will cherish you through ups and downs and I will continue to improve myself for us to
-          have a greater shot in life .But for now let's just enjoy our day and live the present and capture every
-          moment we will have in our life happiest birthday my babyy ,I know that you are always sad when your birthdays
-          coming up but i hope i can be the difference maker for you to finally say that im looking forward for mbtc I
-          love you my baby, my love, my Queen and my everything hopefully a Happy birthday indeed...💜💜
+          Dearest, happy birthday!
+
+          Since the first day I knew we would celebrate each other’s birthdays together, I’ve been looking forward to
+          this moment. I am so grateful to have you in my life—you are my sunshine and my best friend.
+
+          Even though we may feel a bit stagnant in our relationship right now, I want you to know that you are the only
+          one I’ll ever love. I made a promise to myself the day you accepted me into your life as your partner: to
+          cherish you through the ups and downs, and to continuously work on myself so we can have a better future
+          together.
+
+          But for now, let’s enjoy the present. Let’s live in the moment and capture every memory we can today. Happiest
+          birthday, my baby.
+
+          I’m also really sorry for making you upset or angry these past few days. I’ve been struggling to find the time
+          to prepare everything I wanted to give and do for your birthday. I know it might have seemed disorganized or
+          even pointless at times, but I’ve been working hard behind the scenes. I told myself it would all be worth
+          it—even if you were upset—because deep down, I believe you’ll understand.
+
+          I wish you good health, abundant wealth, and a joyful, peaceful year ahead. My wish for our relationship is
+          that we achieve financial freedom, gain more independence from our families, and strengthen our bond to face
+          all the challenges to come.
+
+          I love you so much, baby. I know your birthdays usually bring sadness, but I truly hope I can be the one to
+          change that for you—to make you finally say, “I’m looking forward to my birthday.”
+
+          I love you, my baby, my love, my queen, my everything.
+
+          Hopefully… a truly happy birthday indeed. 💜💜
         </div>
       </div>
     </div>
