--- a/index.html
+++ b/index.html
@@ -87,10 +87,21 @@
           Hopefully… a truly happy birthday indeed. 💜💜
         </div>
       </div>
+
     </div>
-
     <button id="toggleMessageBtn">Show Message</button>
-
+<div class="audio-container">
+  <div class="vinyl-design">
+    <div class="vinyl-record">
+      <div class="vinyl-center"></div>
+      <div class="spinning-indicator"></div> <!-- Add spinning indicator -->
+    </div>
+    <audio controls>
+      <source src="audio/little-things.mp3" type="audio/mpeg" />
+      Your browser does not support the audio element.
+    </audio>
+  </div>
+</div>
     <div class="bt21-footer">
       <p>Powered by your BT21 love 💜</p>
     </div>
