--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   </div>
 </div>
     <div class="bt21-footer">
-      <p>Powered by your BT21 love 💜</p>
+      <p>Powered by your TinyTitan love 💜</p>
     </div>
   </div>
 
