--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="vinyl-design">
     <div class="vinyl-record">
       <div class="vinyl-center"></div>
-      <div class="spinning-indicator"></div> <!-- Add spinning indicator -->
+      <div class="spinning-indicator"></div>
     </div>
     <audio controls>
       <source src="audio/little-things.mp3" type="audio/mpeg" />
@@ -102,12 +102,14 @@
     </audio>
   </div>
 </div>
-    <div class="bt21-footer">
-      <p>Powered by your TinyTitan love 💜</p>
-    </div>
+
+<!-- Footer moved outside the audio-container -->
+<div class="bt21-footer">
+  <p>Powered by your TinyTan love 💜</p>
+  <div class="tinytan-container">
+    <img src="img/tiny-tan.jpg" alt="TinyTan Figures" class="tinytan-image" />
   </div>
-
-
+</div>
 </body>
 
 </html>
